[tool.poetry]
name = "benai"
version = "0.1.0"
description = ""
authors = ["Oleksandr Nazarevych <oleksandr.o.nazarevych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
simplerllm = "^0.3.1.1"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
pydantic = "2.7.1"
uvicorn = "^0.34.0"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
